Упорядочена папка "images"

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 </nav>
                 <ul class="user-actions">
                     <li class="user-actions__item"><a href="#">
-                        <img src="images/icon-1.svg" alt=""></a>
+                        <img src="images/header_icons/icon-1.svg" alt=""></a>
                     </li>
                     <li class="user-actions__item"><a href="#">
-                        <img src="images/icon-2.svg" alt=""></a>
+                        <img src="images/header_icons/icon-2.svg" alt=""></a>
                     </li>
                     <li class="user-actions__item-search"><a href="#">
-                        <img src="images/icon-3.svg" alt=""></a>
+                        <img src="images/header_icons/icon-3.svg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -68,11 +68,11 @@
                 <div class="tea_collection">
                     <h2 class="collection__title">Explore our Collections</h2>
                     <div class="collection__items">
-                        <div class="collection__item"><img src="./images/black.png" alt=""><p>Black</p></div>
-                        <div class="collection__item"><img src="./images/Green.png" alt=""><p>Green</p></div>
-                        <div class="collection__item"><img src="./images/White.png" alt=""><p>White</p></div>
-                        <div class="collection__item"><img src="./images/Oolong.png" alt=""><p>Oolong</p></div>
-                        <div class="collection__item"><img src="./images/Pu-erh.png" alt=""><p>Pu-erh</p></div>                                   
+                        <div class="collection__item"><img src="./images/TeaCollection_img/black.png" alt=""><p>Black</p></div>
+                        <div class="collection__item"><img src="./images/TeaCollection_img/Green.png" alt=""><p>Green</p></div>
+                        <div class="collection__item"><img src="./images/TeaCollection_img/White.png" alt=""><p>White</p></div>
+                        <div class="collection__item"><img src="./images/TeaCollection_img/Oolong.png" alt=""><p>Oolong</p></div>
+                        <div class="collection__item"><img src="./images/TeaCollection_img/Pu-erh.png" alt=""><p>Pu-erh</p></div>                                   
                     </div>
                 </div>
             </div>
@@ -109,40 +109,40 @@
                     <h2 class="teaBlog_title">Our Tea Blog</h2>
                     <div class="teaBlog__articles">
                         <div class="teaBlog__Item">
-                            <img src="./images/RobinsonCrusoe.jpg" alt="">
+                            <img src="./images/TeaBlog_img/RobinsonCrusoe.jpg" alt="">
                             <div class="article__about">
                                 <h3 class="article__title">Tea Time Travels: Funny Moments from Around the World</h3>
                                 <p class="article__autor">by Robinson Crusoe</p>
-                                <a href="#" class="read">Read ></a>
+                                <a href="" class="read">Read ></a>
                              </div>
                         </div>    
                         <div class="teaBlog__Item">
-                            <img src="./images/Joker.jpg" alt="">
+                            <img src="./images/TeaBlog_img/Joker.jpg" alt="">
                             <div class="article__about">
                                 <h3 class="article__title">The Role of Tea in Mental Health
                                 </h3>
                                 <p class="article__autor">by Joker</p>
-                                <a href="#" class="read">Read ></a>
+                                <a href="" class="read">Read ></a>
                             </div>
                         </div>                        
                         <div class="teaBlog__Item">
-                            <img src="./images/Casper_the_Friedly_Ghost.jpg" alt="">
+                            <img src="./images/TeaBlog_img/Casper_the_Friedly_Ghost.jpg" alt="">
                             <div class="article__about">
                                 <h3 class="article__title">Tea-rific Tales: Hilarious Stories from Tea Lovers</h3>
                                 <p class="article__autor">by Casper the Friendly Ghost</p>
-                                <a href="#" class="read">Read ></a>
+                                <a href="" class="read">Read ></a>
                             </div>
                         </div>
                         <div class="teaBlog__Item">
-                            <img src="./images/Author_Authorius.jpg" alt="">
+                            <img src="./images/TeaBlog_img/Author_Authorius.jpg" alt="">
                             <div class="article__about">
                                 <h3 class="article__title">Tea and Caffeine: Effects on the Brain and Behavior</h3>
                                 <p class="article__autor">by Author Authorius</p>
-                                <a href="#" class="read">Read ></a>
+                                <a href="" class="read">Read ></a>
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="ViewAll"> View all </a>           
+                    <a href="" class="ViewAll"> View all </a>           
                 </div>
             </div>
         </section>        
